package refs mainly

--- a/book.bib
+++ b/book.bib
@@ -1243,6 +1243,12 @@ year = {1999}
   doi = {10.1007/978-0-387-98141-3}
 }
 
+@book{wickham2016r,
+  title={R for data science: import, tidy, transform, visualize, and model data},
+  author={Wickham, Hadley and Grolemund, Garrett},
+  year={2016},
+  publisher={" O'Reilly Media, Inc."}
+}
 
 @book{wilkinson2006,
   title={The grammar of graphics},
