--- a/packages.bib
+++ b/packages.bib
@@ -51,6 +51,14 @@
   url = {https://CRAN.R-project.org/package=dplyr},
 }
 
+@Manual{R_GENEAread,
+    title = {GENEAread: Read GENEA Binary Files},
+    author = {Zhou Fang and Joss Langford and Charles Sweetland},
+    year = {2018},
+    note = {R package version 2.0.2},
+    url = {https://CRAN.R-project.org/package=GENEAread},
+}
+
 @Manual{R-GGIR,
   title = {{GGIR}: Raw Accelerometer Data Analysis},
   author = {Vincent T {van Hees} and Zhou Fang and Jing Hua Zhao and Joe Heywood and Evgeny Mirkes and Severine Sabia and Jairo H Migueles},
@@ -68,12 +76,32 @@
   url = {https://CRAN.R-project.org/package=graphicalVAR},
 }
 
+@Manual{R-haven,
+    title = {haven: Import and Export 'SPSS', 'Stata' and 'SAS' Files},
+    author = {Hadley Wickham and Evan Miller},
+    year = {2018},
+    note = {R package version 1.1.2},
+    url = {https://CRAN.R-project.org/package=haven},
+}
+
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
   year = {2017},
   note = {R package version 1.17},
   url = {https://CRAN.R-project.org/package=knitr},
+}
+
+
+@Article{R-lubridate,
+    title = {Dates and Times Made Easy with {lubridate}},
+    author = {Garrett Grolemund and Hadley Wickham},
+    journal = {Journal of Statistical Software},
+    year = {2011},
+    volume = {40},
+    number = {3},
+    pages = {1--25},
+    url = {http://www.jstatsoft.org/v40/i03/},
 }
 
 @Manual{R-nlme,
