--- a/15_instruments_catalogue.Rmd
+++ b/15_instruments_catalogue.Rmd
@@ -5,14 +5,15 @@ To conduct EMA studies, a variety apps, online applications and wearable devices
 
 Table: (\#tab:17a) EMA Instruments.
 
-| Name         | Manufacturer     | URL               | Active | Passive| Backoffice  |
-|-------------:|-----------------:|------------------:|-------:|-------:|------------:|
-| Illumivu     | Illumivu.com     | ilumivu.com       | YES    |  YES   | YES         |
-| MoodBuster   | ICT4D Consortium | moodbuster.eu     | YES    |  YES   | NO          |
-| Movisense    | MoviSence        | movisense.org     | YES    |  YES   | YES         |
-| PsyMate      | PsyMate          | psymate.eu        | YES    |  YES   | NO          |
-| Survey Signal|                  | surveysignal.com  | YES    |  NO    | YES         |
-| RoQua        | RoQua            | roqua.nl          | YES    |  NO    | YES         |
+| Name         | Manufacturer     | URL               | Description
+|-------------:|-----------------:|------------------:|-------------------------------|
+| Illumivu     | Illumivu.com     | ilumivu.com       | Android / iOS EMA app         |
+| MoodBuster   | ICT4D Consortium | moodbuster.eu     | Android EMA app               |
+| Movisense    | MoviSence        | movisense.org     | Android EMA app               |
+| PsyMate      | PsyMate          | psymate.eu        | Android EMA app               |
+| RoQua        | RoQua            | roqua.nl          | SMS / Browser-based EMA       |
+| VU-AMS       | VU               | www.vu-ams.nl     | Wearable for autonomic nervous| 
+|              |                  |                   | system measurement            |
 
 
 ## Illumivu
@@ -27,9 +28,9 @@ Ilumivu's competetive advantage is that it has multi-platform support. It is, ho
 
 ```{r fig17a, echo = FALSE, fig.cap = "Ilumivu App Screenshots", out.width = '25%', fig.align = 'center', fig.show = 'hold', fig.pos = "!h"}
 knitr::include_graphics(c(
-   "images/instruments/illumivu/iv-app-1.png",
-   "images/instruments/illumivu/iv-app-2.png",
-   "images/instruments/illumivu/iv-app-3.png"))
+   "images/instruments/ilumivu/iv-app-1.png",
+   "images/instruments/ilumivu/iv-app-2.png",
+   "images/instruments/ilumivu/iv-app-3.png"))
 ```
 
 ## MoodBuster
@@ -59,6 +60,11 @@ MoviSensXS EMA licence costs vary from 500 to 10.000 euro's per year, depending 
 
 A major limitation of Movisens is the lack of an iOS version of the EMA app. Study participants who own an iphone have to be excluded from studies, or will have to be provided with an Android phone. 
 
+```{r movisens, echo = FALSE, fig.cap = "Movisens Sample scheme editor (left) and App Screenshots (right)", out.width = '100%', fig.align = 'center', fig.show = 'hold', fig.pos = "!h"}
+knitr::include_graphics(c(
+   "images/instruments/movisens/movisens.png"))
+```
+
 ### PsyMate
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula augue metus, in tincidunt urna luctus sit amet. Sed ultrices, erat at laoreet semper, sem tellus hendrerit mi, eget pulvinar massa nisl ac dolor. Nunc ac tellus nec tortor interdum porta. Vestibulum hendrerit tempus condimentum. Donec a mollis sem. Aenean lectus nunc, bibendum ut orci vel, tristique pellentesque arcu. Vestibulum id laoreet neque. Phasellus at ex velit. Vestibulum scelerisque nulla ut massa tempor, ac dapibus dui viverra.  
@@ -74,16 +80,11 @@ knitr::include_graphics(c(
 ```
 
 
-## Survey Signal
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula augue metus, in tincidunt urna luctus sit amet. Sed ultrices, erat at laoreet semper, sem tellus hendrerit mi, eget pulvinar massa nisl ac dolor. Nunc ac tellus nec tortor interdum porta. Vestibulum hendrerit tempus condimentum. Donec a mollis sem. Aenean lectus nunc, bibendum ut orci vel, tristique pellentesque arcu. Vestibulum id laoreet neque. Phasellus at ex velit. Vestibulum scelerisque nulla ut massa tempor, ac dapibus dui viverra.  
-
-
 ## RoQua
 
 RoQua (http://www.roqua.nl/) is a web-based Routine Outcome Monitoring system, developed and maintained by a Dutch non-profit development and service organization that is funded by several by northern GGZ organisations and the Department of Psychiatry, University Medical Center Groningen. RoQUA has a sophisticated and user-friendly online backoffice portal, with which researchers can define assessment protocols and invite study participants - through e-mail or SMS - to complete questionnaires online (on desktop or mobile devices). By inviting study participants several times a day to complete a questionnaire via the standard web browser of their mobile phone, active EMA an be implemented. This approach is taken in several large-scale studies, including 'NESDA' (nesda.nl) and 'HowNutsAreTheDutch' (www.hoegekis.nl; see [@VanDerKrieke2017; @VanDerKrieke2016]).
 
-At present, RoQua does not support the collections of passive EMA data. Preliminary results have been reported with system called 'Physiqual' [@Blaauw2016], with which EMA data, collected with RoQUA, can be automatically combined with wearable sensor data.
+At present, RoQua does not support the collection of passive EMA data. However, preliminary results have been reported with a system called 'Physiqual' [@Blaauw2016], with which EMA data, collected with RoQUA, can be automatically combined with wearable sensor data.
 
 
 ```{r roqua-results, echo = FALSE, fig.cap = "Screenshots of the participant feedback web-page of the 'HowNutsAreTheDutch' project, in which data is collected by the RoQUA system", out.width='30%', fig.align = 'center', fig.show = 'hold', fig.pos = "!h"}
@@ -94,3 +95,12 @@ knitr::include_graphics(c(
 ```
 
 
+### VU-AMS
+
+The VU University Ambulatory Monitoring System (VU-AMS) was developed by the department of Biological Psychology and the Technical Department (ITM) of the Faculty of Psychology and Education to allow ambulant recording of autonomic and cardiovascular activity (http://www.vu-ams.nl/). The system can be used to measure Heart Rate / Inter beat Interval, Heart Rate Variability, Respiratory Sinus Arrhythmia, Pre-Ejection Period, Left Ventricular Ejection Time, Respiration Rate, Stroke Volume (SV) and Cardiac Output, Skin Conductance Level (SCL) and Skin Conductance Responses (SCRs) and Tri-Axial Accelerometry (of Body Movement). For the processing of VU-AMS data, a dedicated software suite called the 'Data Analysis and Management Software' (VU-DAMS) is available (for Windows and Mac).
+
+
+```{r vu-ams, echo = FALSE, fig.cap = "VU-AMS device", out.width = '100%', fig.align = 'center', fig.show = 'hold', fig.pos = "!h"}
+knitr::include_graphics(c(
+   "images/instruments/VU-AMS/VU_AMS.png"))
+```
