--- a/frontpage.tex
+++ b/frontpage.tex
@@ -1,5 +1,5 @@
 \thispagestyle{empty}
-\includepdf[fitpaper=false, pages=-]{images/cover/cover.pdf}
+\includepdf[fitpaper=false, pages=-]{images/cover/cover.png}
 
 % restore maketile (disabled in preamble.tex to get the cover before
 % title)
